fix boxed header top margin spacing

--- a/wp-content/themes/modern-journalist/sass/pages/_posts.scss
+++ b/wp-content/themes/modern-journalist/sass/pages/_posts.scss
@@ -88,7 +88,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: bottom;
-			margin: 1rem 1.5rem 3rem;
+			margin: 3rem 1.5rem 3rem;
 			@include breakpoint("medium") {
 				width: 80%;
 				margin: 5rem auto;
